--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-01  Christian Stimming  <stimming@tuhh.de>
+
+	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
+	<lorenzo.cappelletti@email.it>.
+
 2003-04-29  Herbert Thoma  <herbie@hthoma.de>
 
 	* src/engine/Account.c: move currency conversion to gnc-pricedb.c
