2003-05-01  Christian Stimming  <stimming@tuhh.de>
	* po/en_GB.po: Updated British English translation by Nigel Titley
	<nigel@titley.com>


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8264 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-05-01  Christian Stimming  <stimming@tuhh.de>
 
+	* po/en_GB.po: Updated British English translation by Nigel Titley
+	<nigel@titley.com>
+
 	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
 	<lorenzo.cappelletti@email.it>.
 
