--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-02  Christian Stimming  <stimming@tuhh.de>
+
+	* configure.in: Add pkg-config test for libgnomeui-2.0.
+
+	* src/import-export/hbci/*.c: Port hbci import module to Gnome2,
+	sourcecode compiles now. Copy changes from HEAD branch.
 
 2003-04-29 TomF changes for gnucash-gnome2-dev, 12th batch
 	* src/gnome-utils/gnc-date-edit.c:gnc_date_edit_class_init:
