--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-07  Christian Stimming  <stimming@tuhh.de>
+
+	* po/en_GB.po: Updated British english translation by Nigel Titley
+	<nigel@titley.com>
+
 2003-05-05  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/dialog-hbcitrans.c, gnc-hbci-utils.h,
