--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-08  Derek Atkins  <derek@ihtfp.com>
+
+	* macros/openhbci.m4: revert cstim's and hampton's changes to make
+	  it work again on both older and newer autoconf versions.
+
 2003-05-07  Christian Stimming  <stimming@tuhh.de>
 
 	* po/en_GB.po: Updated British english translation by Nigel Titley
