2003-05-08  Christian Stimming  <stimming@tuhh.de>
	* po/glossary/pt_BR.po: New Brazilian Portugese glossary by Jon
	Lapham <lapham@extracta.com.br>


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8280 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-08  Christian Stimming  <stimming@tuhh.de>
+
+	* po/glossary/pt_BR.po: New Brazilian Portugese glossary by Jon
+	Lapham <lapham@extracta.com.br>
+
 2003-05-08  Derek Atkins  <derek@ihtfp.com>
 
 	* macros/openhbci.m4: revert cstim's and hampton's changes to make
