--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-09  Christian Stimming  <stimming@tuhh.de>
+
+	* macros/openhbci.m4: Fix openhbci macro again so that it uses a C
+	check program.
+
 2003-05-08  Christian Stimming  <stimming@tuhh.de>
 
 	* po/glossary/pt_BR.po: New Brazilian Portugese glossary by Jon
