--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-10  Derek Atkins  <derek@ihtfp.com>
+
+	* po/POTFILES.in: removed src/engine/DateUtils.c -- it no longer
+	  exists in the build.
+
 2003-05-09  Christian Stimming  <stimming@tuhh.de>
 
 	* macros/openhbci.m4: Fix openhbci macro again so that it uses a C
