--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-10  Chris Lyttle  <chris@wilddev.net>
+	* configure.in: release 1.8.3
+	* NEWS: release 1.8.3
+
 2003-05-10  Derek Atkins  <derek@ihtfp.com>
 
 	* po/POTFILES.in: removed src/engine/DateUtils.c -- it no longer
