--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,67 @@
 Version history:
 ------- -------
 
+ 1.8.3  - 03 May 2003
+ 	 o Updated translations: Italian, Swedish, Danish, British,
+	   Traditional Chinese, French, German, Tamil, Brazilian Portugese.
+	 o Turn off the report-total by default
+	 o The Euroland currency rates were inverted in the transfer dialog.
+	 o Chris Morgan's Baysian Matching code, to match transactions based
+	   on Bayesian filtering of previously matched transactions.
+	 o Fix a bug in the account name list when you you filtered down to no
+	   accounts it would ignore the filter.
+	 o The Account Separator option was moved to the Accounts page,
+	   reference correctly.
+	 o Fix the keypress handlers so they work properly for both the text
+	   entry widget and the calendar popup widget.
+	 o Force the cursor to the first line of a transaction split before
+	   disabling "double line" mode in the register.  This prevents the
+	   register refresh code from trying to update a cell that is no longer
+	   visible.
+	 o Fix HBCI close-on-finished checkbutton.
+	 o Add descriptions of new HBCI actions.
+	 o OpenBSD fixes by Todd T. Fries
+	 o New report "income vs. day of week" by Andy Wingo
+	 o Fix a couple strings to improve comments when owners and accounts
+	   are missing.  Direct the user to select them in the report options.
+	 o When building the "name + address" string, check if the company
+	   name and contact name are the same and, if so, only print one of
+	   them.
+	 o Fix the glade settings so resizing the window will properly resize
+	   the widgets.
+	 o Save the entry cells before adding an it to the invoice, otherwise
+	   it wont get sorted properly.
+	 o Add support in business code for the to-charge amount.
+	 o Don't ask the user in the general case when making changes to
+	   entries.  Generally the user should be allowed to make whatever
+	   changes they want without being pestered.
+	 o Guile-1.6 requires empty lists to be quoted.
+	 o Symbols are not strings in guile-1.6.
+	 o Fix "WeekDelta" and add TwoWeekDelta.
+	 o Pop up a dialog if the user tries to transfer from a non-currency
+	   account, and don't let them do it.
+	 o Evaluate the date during get_predicate() in case the user just "hit
+	   return" (and the auto-evaluate didn't happen).
+	 o Fix crash during import of investment accounts.
+	 o Fixes for GCC 3.3 warnings
+	 o Fix HBCI user messages where chip cards were confused with key
+	   files.
+	 o Adapt to latest changes in OpenHBCI CVS.
+	 o Applied Tomas Pospisek's patch to the transaction report.
+	 o Fix the description of gnc:mdi-show-progress.
+	 o Enable changing the "ID" for different business objects.
+	 o Fix the percentage calculations so we don't get GtkCritical
+	   warnings.
+	 o Disable the test-scm-query-import test, since it breaks on
+	   guile-1.6
+	 o Move currency conversion to gnc-pricedb.c
+	 o Improve report for stocks and funds not denominated in report
+	   currency.
+	 o QIF imports don't assume that a date of the form XXXXXXXX is always
+	   YYYYMMDD. Make sure a 4-digit year "makes sense"
+	 o Fix hbci and ofx test for handling --disable correctly.
+	 o Fix openhbci macro again so that it uses a C check program.
+
  1.8.2  - 09 March 2003
  	 o Updated translations: German, Slovak, Spanish
 	 o Updated HBCI requirement to 0.9.6
