* src/import-export/hbci/gnc-hbci-utils.c: you have to declare 	  your variables before you g_assert() anything.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8296 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-11  Derek Atkins  <derek@ihtfp.com>
+
+	* src/import-export/hbci/gnc-hbci-utils.c: you have to declare
+	  your variables before you g_assert() anything.
+
 2003-05-10  Chris Lyttle  <chris@wilddev.net>
 	* configure.in: release 1.8.3
 	* NEWS: release 1.8.3
