2003-05-15  Christian Stimming  <stimming@tuhh.de>
	* po/cs.po: New Czech translation by Miloslav Trmac
	<mitr@volny.cz>.

	* po/glossary/pt_BR.po: Updated Brazilian portugese glossary by
	Jon Lapham <lapham@extracta.com.br>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8314 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-05-15  Christian Stimming  <stimming@tuhh.de>
+
+	* po/cs.po: New Czech translation by Miloslav Trmac
+	<mitr@volny.cz>.
+
+	* po/glossary/pt_BR.po: Updated Brazilian portugese glossary by
+	Jon Lapham <lapham@extracta.com.br>.
+
 2003-05-12  David Hampton  <hampton@employees.org>
 
 	* src/quotes/finance-quote-check.in: 
