2003-05-15  Christian Stimming  <stimming@tuhh.de>
	* po/pt_BR.po: Updated Brazilian portugese translation by Jon
	Lapham <lapham@extracta.com.br>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8315 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-05-15  Christian Stimming  <stimming@tuhh.de>
 
+	* po/pt_BR.po: Updated Brazilian portugese translation by Jon
+	Lapham <lapham@extracta.com.br>.
+
 	* po/cs.po: New Czech translation by Miloslav Trmac
 	<mitr@volny.cz>.
 
